[package]
name = "iota-e2e-tests"
authors = ["IOTA Foundation <contact@iota.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true
prometheus.workspace = true
fs_extra.workspace = true
indexmap.workspace = true
insta.workspace = true
jsonrpsee.workspace = true
test-cluster.workspace = true
rand.workspace = true
expect-test.workspace = true
tokio.workspace = true
tracing.workspace = true
assert_cmd.workspace = true
serde.workspace = true
bcs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
serde_json.workspace = true

move-binary-format.workspace = true
move-package.workspace = true
telemetry-subscribers.workspace = true
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
move-core-types.workspace = true

iota-bridge.workspace = true
iota-core.workspace = true
iota-framework.workspace = true
iota-json-rpc.workspace = true
iota-json-rpc-api.workspace = true
iota-node.workspace = true
iota-macros.workspace = true
iota-network.workspace = true
iota-simulator.workspace = true
iota-storage.workspace = true
iota-metrics.workspace = true
iota-tool.workspace = true
iota-protocol-config.workspace = true
iota-types.workspace = true
iota-move-build.workspace = true
iota-swarm-config.workspace = true
iota-swarm.workspace = true
iota-test-transaction-builder.workspace = true
iota-config.workspace = true
iota-json-rpc-types.workspace = true
iota.workspace = true
iota-sdk.workspace = true
iota-keys.workspace = true
iota-rest-api.workspace = true
shared-crypto.workspace = true

passkey-types.workspace = true
passkey-client.workspace = true
passkey-authenticator.workspace = true
coset.workspace = true
url.workspace = true
p256.workspace = true
