[package]
name = "iota-e2e-tests"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]

[dev-dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
bip32.workspace = true
clap.workspace = true
coset.workspace = true
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
fs_extra.workspace = true
futures.workspace = true
indexmap.workspace = true
insta.workspace = true
jsonrpsee.workspace = true
p256.workspace = true
passkey-authenticator.workspace = true
passkey-client.workspace = true
passkey-types.workspace = true
prometheus.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

# internal dependencies
iota.workspace = true
iota-bridge.workspace = true
iota-config.workspace = true
iota-core.workspace = true
iota-framework.workspace = true
iota-genesis-builder.workspace = true
iota-json-rpc.workspace = true
iota-json-rpc-api.workspace = true
iota-json-rpc-types.workspace = true
iota-keys.workspace = true
iota-macros.workspace = true
iota-metrics.workspace = true
iota-move-build.workspace = true
iota-network.workspace = true
iota-node.workspace = true
iota-protocol-config.workspace = true
iota-rest-api.workspace = true
iota-sdk.workspace = true
iota-simulator.workspace = true
iota-storage.workspace = true
iota-swarm.workspace = true
iota-swarm-config.workspace = true
iota-test-transaction-builder.workspace = true
iota-tool.workspace = true
iota-types.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-package.workspace = true
shared-crypto.workspace = true
telemetry-subscribers.workspace = true
test-cluster.workspace = true
