[package]
name = "iota-faucet"
version.workspace = true
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
serde.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
futures.workspace = true
uuid.workspace = true
prometheus.workspace = true
scopeguard.workspace = true
tap.workspace = true
ttl_cache.workspace = true
eyre.workspace = true
rocksdb.workspace = true
tempfile.workspace = true
parking_lot.workspace = true

iota.workspace = true
iota-json-rpc-types.workspace = true
iota-types.workspace = true
iota-config.workspace = true
iota-keys.workspace = true
iota-sdk.workspace = true
mysten-metrics.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true
typed-store-derive.workspace = true
shared-crypto.workspace = true
async-recursion.workspace = true

[dev-dependencies]
test-cluster.workspace = true

[[bin]]
name = "iota-faucet"
path = "src/main.rs"
