[package]
name = "iota-framework-snapshot"
version.workspace = true
edition = "2021"
authors = ["IOTA Foundation <contact@iota.org>"]
description = "Tool to create a bytecode snapshot of the current iota-framework"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
bcs.workspace = true
serde.workspace = true
serde_json.workspace = true
bin-version.workspace = true

iota-framework.workspace = true
iota-protocol-config.workspace = true
iota-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
