[package]
name = "iota-framework-snapshot"
version.workspace = true
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Tool to create a bytecode snapshot of the current iota-framework"

[dependencies]
anyhow.workspace = true
bcs.workspace = true
bin-version.workspace = true
serde.workspace = true
serde_json.workspace = true

iota-framework.workspace = true
iota-protocol-config.workspace = true
iota-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
