[package]
name = "iota-framework-snapshot"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Tool to create a bytecode snapshot of the current iota-framework"

[dependencies]
# external dependencies
anyhow.workspace = true
bcs.workspace = true
serde.workspace = true
serde_json.workspace = true

# internal dependencies
bin-version.workspace = true
iota-framework.workspace = true
iota-protocol-config.workspace = true
iota-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
