[package]
name = "iota-framework"
version = "0.1.0"
edition = "2021"
authors = ["IOTA Foundation <contact@iota.org>"]
description = "Move framework for iota platform"
license = "Apache-2.0"
publish = false

[dependencies]
bcs.workspace = true
serde.workspace = true
once_cell.workspace = true
tracing.workspace = true

iota-types.workspace = true

move-binary-format.workspace = true
move-core-types.workspace = true

[dev-dependencies]
anyhow.workspace = true
bcs.workspace = true
regex.workspace = true
tempfile.workspace = true

move-binary-format.workspace = true
move-compiler.workspace = true
move-package.workspace = true
iota-move-build.workspace = true
