[package]
name = "iota-framework"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Move framework for iota platform"

[dependencies]
# external dependencies
bcs.workspace = true
once_cell.workspace = true
serde.workspace = true
tracing.workspace = true

# internal dependencies
iota-types.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true

[dev-dependencies]
# external dependencies
anyhow.workspace = true
bcs.workspace = true
capitalize = "0.3.4"
regex.workspace = true
serde_json.workspace = true
tempfile.workspace = true

# internal dependencies
iota-move-build.workspace = true
move-binary-format.workspace = true
move-compiler.workspace = true
move-package.workspace = true
