[package]
name = "iota-genesis-builder"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow.workspace = true
bcs.workspace = true
bigdecimal = "0.4"
camino.workspace = true
clap.workspace = true
fastcrypto.workspace = true
flate2.workspace = true
fs_extra = "1.3"
itertools.workspace = true
packable = { version = "0.8", default-features = false, features = ["io"] }
prefix-hex = "0.7"
prometheus.workspace = true
rand = { workspace = true, features = ["std_rng"] }
rand_pcg = "0.3"
rand_seeder = "0.3"
regex.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"

# internal dependencies
iota-adapter-latest = { path = "../../iota-execution/latest/iota-adapter/" }
iota-config.workspace = true
iota-execution.workspace = true
iota-framework.workspace = true
iota-framework-snapshot.workspace = true
iota-genesis-common.workspace = true
iota-move-build.workspace = true
iota-move-natives-latest = { path = "../../iota-execution/latest/iota-move-natives" }
iota-protocol-config.workspace = true
iota-sdk = { version = "1.1", default-features = false, features = ["irc_27", "irc_30", "std"] }
iota-types.workspace = true
move-binary-format.workspace = true
move-compiler.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-vm-runtime-latest = { path = "../../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
shared-crypto.workspace = true

[target.'cfg(msim)'.dependencies]
iota-simulator.workspace = true

[dev-dependencies]
# external dependencies
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }

# internal dependencies
iota-swarm-config.workspace = true
iota-types = { workspace = true, features = ["test-utils"] }

[features]
test-outputs = ["iota-sdk/client"]

[[example]]
name = "snapshot_add_test_outputs"
path = "examples/snapshot_add_test_outputs.rs"
required-features = ["test-outputs"]

[[example]]
name = "snapshot_only_test_outputs"
path = "examples/snapshot_only_test_outputs.rs"
required-features = ["test-outputs"]
