[package]
name = "iota-genesis-common"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
prometheus.workspace = true

# internal dependencies
iota-execution.workspace = true
iota-protocol-config.workspace = true
iota-types.workspace = true
