[package]
name = "iota-graphql-e2e-tests"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "End to end tests for Iota GraphQL"

[lints]
workspace = true

[dev-dependencies]
# external dependencies
datatest-stable.workspace = true
tokio.workspace = true

# internal dependencies
iota-graphql-rpc.workspace = true
iota-transactional-test-runner.workspace = true

[[test]]
name = "tests"
harness = false

[dependencies]

[features]
default = ["pg_backend"]
pg_integration = []
pg_backend = []

[target.'cfg(msim)'.dependencies]
msim.workspace = true
